Added option to download all transactions

--- a/Application/Invoicer/Properties/Strings/ENUSStrings.resx
+++ b/Application/Invoicer/Properties/Strings/ENUSStrings.resx
@@ -132,6 +132,9 @@
   <data name="CityPropertyLabel" xml:space="preserve">
     <value>city</value>
   </data>
+  <data name="CompaniesCustomersTransactionsExportFailedMessage" xml:space="preserve">
+    <value>The transactions for the companies customers couldn't be exported for the following reason: </value>
+  </data>
   <data name="CompanyAddedFailedMessage" xml:space="preserve">
     <value>Couldn't add company for the following reason: </value>
   </data>
